[workspace]
members = ["wpkg-macro", "wpkg-crypto", "wpkg-crypto/wpkg-key"]
resolver = "2"

[package]
name = "wpkg"
version = "0.0.6-5"
edition = "2021"
build = "build.rs"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[dependencies]
better-panic = "0.3.0"
anyhow = "1.0.58"
serde_json = "1.0.85"
whoami = "1.2.1"
tracing-subscriber = "0.3.15"
tracing = "0.1.35"
systemstat = "0.2.0"
platform-dirs = "0.3.0"
sysinfo = "0.25.0"
screenshots = "0.4.3"
rand = "0.8.5"
async-recursion = "1.0.0"
async-trait = "0.1.57"
lazy_static = "1.4.0"
tokio = { version = "1.20.0", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.11.11", features = ["json"] }
serde = { version = "1.0.144", features = ["derive"] }
wpkg-macro = { path = "./wpkg-macro" }
wpkg-crypto = { path = "./wpkg-crypto" }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
