[workspace]
members = ["wpkg-macro", "wpkg-crypto", "wpkg-crypto/wpkg-key"]
resolver = "2"

[package]
name = "wpkg"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[dependencies]
better-panic = "0.3"
anyhow = "1.0"
serde_json = "1.0"
whoami = "1.2"
tracing-subscriber = "0.3"
tracing = "0.1"
systemstat = "0.2"
platform-dirs = "0.3"
sysinfo = "0.26"
screenshots = "0.4"
rand = "0.8"
async-recursion = "1.0"
async-trait = "0.1"
lazy_static = "1.4"
tokio = { version = "1.20", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
wpkg-macro = { path = "./wpkg-macro" }
wpkg-crypto = { path = "./wpkg-crypto" }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
