[workspace]
members = ["wpkg-macro", "wpkg-crypto", "wpkg-crypto/wpkg-key"]
resolver = "2"

[package]
name = "wpkg"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[dependencies]
# Async runtime
tokio = { version = "1.20", features = ["macros", "rt-multi-thread"] }

# Logger
tracing = "0.1"
tracing-subscriber = "0.3"
better-panic = "0.3.0"

# Updater
reqwest = { version = "0.11", features = ["json"] }

# Cryptographic
wpkg-macro = { path = "./wpkg-macro" }
wpkg-crypto = { path = "./wpkg-crypto" }

# TCP
async-recursion = "1.0"
whoami = "1.2" # get system hostname
# commands
async-trait = "0.1"
systemstat = "0.2"
sysinfo = "0.26"
screenshots = "0.4"
rand = "0.8" # random screenshot filename

# Other
anyhow = "1.0"
lazy_static = "1.4"
platform-dirs = "0.3" # get working directory
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zip = "0.6.2" # manipulate .zip files
zip-extract = "0.1.1"
